[package]
name = "rosu-pp-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap_derive = { version = "4.5.0", default-features = false }
csv = { version = "1.3.0", default-features = false }
dotenvy = { version = "0.15.7"}
indicatif = { version = "0.17.8" }
memmap2 = { version = "0.9.4" }
rand = { version = "0.8.5" }
rkyv = { version = "0.8.8", features = ["bytecheck", "std"] }
rosu-pp = { path = "../rosu-pp", default-features = false, features = ["raw_strains"] }
rosu-mods = { version = "0.4.0" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["arbitrary_precision"] }
